# podcast-downloader

./: .gitignore  README.md  pyproject.toml
podcast_downloader/: downloader.py  highlight.py  main.py  save_video.py  summary.py  transcribe.py
podcast_downloader/downloader/: available_services_ABC.py  downloader.py
tests/: test_downloader.py  test_highlight.py  test_save_video.py  test_summary.py  test_transcribe.py
