[tool.poetry]
name = "podcast-downloader"
version = "0.1.0"
description = ""
authors = ["Victor Mas Montserrat <victormasmon@gmail.com>"]
readme = "README.md"
packages = [{include = "podcast_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
speechrecognition = "^3.10.0"
pytube = "^15.0.0"
pytest = "^7.3.1"
transformers = "^4.29.2"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
